Improve performance; fix bugs
